cmake_minimum_required(VERSION 3.17)
project(a1_911_buiciuc_andrei_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(a1_911_buiciuc_andrei_1
        .idea/.gitignore
        .idea/a1-911-buiciuc-andrei-1.iml
        .idea/modules.xml
        .idea/vcs.xml
        .idea/workspace.xml
        .gitignore
        main.c
        README.md main.c)
